3.41
Show network cards chipset while selecting interface
Some language strings changed
License updated to GPL3+
System of prefixes and colors for hints and strings pending of translation [PoT]

3.4
Improved regexp to get new interface names after a change
Fixed bug managing paths containing blank spaces
New feature, drag and drop files on console window to entering file paths
New offline decrypting attacks based on cpu hashcat (dictionary, bruteforce and rule based)
Debug mode for faster development skipping intro and initial checks
Bash version check improved for future versions
Exit script code changes to differentiate when script was interrupted

3.34
Ascii art intro added on script startup (animated flying saucer!!)
Bug fixed after putting card in monitor mode and the card name changed on some distros
Compatibility extended to Gentoo, Fedora and Red Hat Linux

3.33
Bug fixed relaunching script after donwload a new version
Credits beautified
Known compatible distros unified in one array
"No check kill needed" feature method changed. Now based on Network Manager version
Changes on rfkill method

3.32
Bash version check simplified
Bug with long interface names fixed
Changed trap management, now with buffered messages
Curl removed from essential tools. Now the script performs a separated check for update tools only used for auto-update
Compatibility extended to CentOS Linux

3.31
Check for root permissions after failed essential tools check
Improved missing optional tools detection method and integration with menus
Menu separator lines extracted to functions

3.3
SIGTSTP trap now handled
Minimum bash version check (v4)
Some language strings changed
Non Linux OS check added (Solaris, FreeBSD, OSX)
Compatibility extended to OpenSUSE Linux
README.md updated about Mac OSX incompatibility
Improved OS language detection method
Fixed bug in auto-update

3.23
Compatibility extended to Cyborg Hawk Linux