@@ -2,6 +2,7 @@
 Show network cards chipset while selecting interface
 Some language strings changed
 License updated to GPL3+
+Added Open Document SpreadSheet for easy translation
 System of prefixes and colors for hints and strings pending of translation [PoT]
 
 3.4
